2000-07-27  Joe Shaw  <joe@helixcode.com>

	* src/htmltokenizer.c (html_tokenizer_write): Initialize the tokenizer
	if it hasn't been already.
	
2000-07-27  Radek Doulik  <rodo@helixcode.com>

	* htmlclueflow.c (spell_check_word): fixed bad condition in
	g_assert

2000-07-26  Larry Ewing  <lewing@helixcode.com>

	* htmlembedded.c (html_embedded_set_widget): call force_placement.
	(force_placement): The hack to force the widget to get size
	allocated lives here now.

	* htmliframe.c (html_iframe_init): remove the hack for allocation
	from here since it is now in htmlembedded.

	* htmlengine.c (html_engine_destroy): only destroy the spell
	checker if it was properly made.

2000-07-26  Radek Doulik  <rodo@helixcode.com>

	* htmlclueflow.c (html_clueflow_spell_check): as below

	* htmlengine.c (html_engine_spell_check): do spell checking only
	if spell_checker was successfuly created

2000-07-24  Peter Williams  <peterw@helixcode.com>

	* gtkhtml.c (setup_scroll_timeout): Use GDK_THREADS_LEAVE/ENTER
	around our direct call the scroll_timeout_cb so that we don't
	deadlock, as we're in a GDK event loop so the threads are locked
	already.

2000-07-21  Radek Doulik  <rodo@helixcode.com>

	* gtkhtml-properties.c (gtk_html_class_properties_load):
	implemented gnome_config properties loading
	(gtk_html_class_properties_save): and saving

	* htmlclueflow.c (next_obj): new helper function, skips to next
	non-slave object and updates offset and is_text flag
	(spell_check_word): simplified, use next_obj
	(html_clueflow_spell_check): fixed case, when after add to
	session/personal dictionary word is checked OK and is on the end
	of flow - before there were not cleared spell errors

2000-07-20  Ramiro Estrugo  <ramiro@eazel.com>

	* gtkhtml-properties.c:
	* gtkhtml.c: (class_init):
	* htmltext.c: (destroy):
	Protect more pspell dependent code with #ifdef GTKHTML_HAVE_PSPELL.

2000-07-20  Radek Doulik  <rodo@helixcode.com>

	* htmltext.c (copy_helper): copy spell_errors here