@@ -1,3 +1,10 @@
+2000-07-28  Ettore Perazzoli  <ettore@helixcode.com>
+
+	* gtkhtml.c (button_press_event): Don't select the region if
+	`allow_selection' is false.
+	(motion_notify_event): Don't select anything if `allow_selection'
+	is false.
+
 2000-07-27  Joe Shaw  <joe@helixcode.com>
 
 	* src/htmltokenizer.c (html_tokenizer_write): Initialize the tokenizer
